--- a/landing.html/cart_style.css
+++ b/landing.html/cart_style.css
@@ -685,18 +685,17 @@ to {opacity: 1}
 
 
 
+/* cart start */
 
 
 
 
 
-body{
- background:black;
-}
-.cont{
+/* .cont{
  display:flex;
  width:70%;
  height:260px;
+ border: 1px solid red;
  margin:auto;
 }
 .box{
@@ -705,19 +704,21 @@ body{
  font-size:9px;
  text-align:left;
  color:white;
- margin-bottom: 20px;
+ /* border: 1px solid red; */
+ /* margin-bottom: 20px;
  margin-right: 30px;
-}
-.flex{
+} */
+/* .flex{
  display:flex;
  justify-content: space-evenly;
 
-}
+} */ 
 .cart_data>div>img{
  width:180px;
- height:180px;   
+ height:180px; 
+ border: 1px solid red;  
 }
-.price1{
+/* .price1{
 text-decoration: line-through;
 }
 .cont1{
@@ -760,13 +761,13 @@ font-size:15px;
 }
 .clr{
  margin-bottom:20px;
-}
+} */
 
 
 
 
 
-
+/* cart end */
 
 
 
