--- a/landing.html/product.css
+++ b/landing.html/product.css
@@ -759,6 +759,7 @@ option:hover{
             font-family: 'Gotham-bold',sans-serif;
             margin-top:250px ;
             margin-bottom: 0px;
+            
 
         }
 .incontainer1{
@@ -768,7 +769,8 @@ option:hover{
     width: 33%;
     text-align: left;
     padding-left: 150px;
-    margin-top:50px;
+    margin-top:100px;
+    margin-right: 40px;
 }
 .incontainer2{
     width: 1px;
@@ -779,7 +781,7 @@ option:hover{
 .incontainer3{
     width: 33%;
     display: flex;
-    margin-top:40px;
+    margin-top:90px;
 
     
 }
@@ -792,12 +794,19 @@ option:hover{
 .incontainer5{
     width: 33%;
     display: flex;
-    margin-top:50px;
+    margin-top:100px;
 
+}
+
+#innerdiv1{
+    padding-left: 20px;
 }
 #innerdiv1>p{
    margin-left: 25px;
    line-height: 40px;
+}
+#innerdiv2{
+    padding-left: 50px;
 }
 #innerdiv2>p{
    margin-left: 15px;
@@ -812,10 +821,14 @@ option:hover{
    line-height: 40px;
   
 }
-
-body{
-    background-color:black;
+#internal1{
+    padding-left: 20px;
 }
+#internal2{
+    padding-left: 50px;
+}
+
+/* fotter */
 p{
    color: white;
    font-size: 15px;
@@ -860,6 +873,12 @@ p{
 #out{
    position: relative;
 }
+
+#cart_click{
+    cursor: pointer;
+}
+
+
 
 #cart_click{
     cursor: pointer;
