--- a/landing.html/product.css
+++ b/landing.html/product.css
@@ -883,3 +883,20 @@ p{
 #cart_click{
     cursor: pointer;
 }
+
+#options {
+        width: 20%;
+        box-shadow: 0 0 8px 4px hsl(0deg 0% 78% / 21%);
+        padding: 1.5rem;
+        position: relative;
+        background:black;
+        color: white;
+        transition: all .5s ease-in;
+        display: inline-block;
+        margin: 1%;
+        /* border: 1px solid red; */
+    }
+    .optopnal{
+        display: flex;
+        /* border: 1px solid red; */
+    }
